# wallpaper-unpacker-gui

./: .gitignore  README.md  README_zh.md  gui.py  icons.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: windows-release.yml
app/: binary.py  extractor.py  local_state.py  models.py  pkg_reader.py  tex_convert.py  tex_reader.py
